# im360_wp_vuln_incident

./: .gitignore  README  README.md  config.yaml  im360_wp_vuln_incident.py  pyproject.toml  requirements.txt  ruleid_cve.py
wp-cli-vuln-scanner-installer/: install_wp_cli_vuln_scanner  rootless_wp_cli_installer_wrapper
